--- a/src/components/AsideHeader/components/AllPagesPanel/AllPagesGroupHeader.scss
+++ b/src/components/AsideHeader/components/AllPagesPanel/AllPagesGroupHeader.scss
@@ -2,5 +2,9 @@
 
 .#{variables.$ns}all-pages-group-header {
     padding: 0 var(--g-spacing-6);
-    height: 40px;
+    height: 36px;
+
+    &__title-container {
+        column-gap: var(--g-spacing-4);
+    }
 }
