fix: logo margin

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -190,7 +190,7 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__logo-button {
-        margin: 0 var(--g-spacing-2) 2px;
+        margin: 0 10px 2px;
     }
 
     &__logo-button &__logo-icon-place {
