--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -74,6 +74,7 @@ body {
         @include mixins.text-accent;
         width: 100%;
         height: 100%;
+        display: flex;
     }
 
     &__components-panel,
