feat: move sort icon to right position

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -205,6 +205,11 @@ $block: '.#{variables.$ns}aside-header';
         flex-grow: 1;
     }
 
+    &__menu-items-group,
+    &__menu-item {
+        margin-inline: 10px;
+    }
+
     &__footer {
         flex-shrink: 0;
         margin: var(--g-spacing-2) 10px;
