--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@@ -18,7 +18,7 @@ $block: '.#{variables.$ns}composite-bar';
 
     &__menu-group-item,
     &__menu-group-header,
-    & &__root-menu-item[class] {
+    &__root-menu-item[class] {
         margin-bottom: 2px;
 
         &:last-child {
@@ -34,6 +34,23 @@ $block: '.#{variables.$ns}composite-bar';
 
         &::-webkit-scrollbar {
             display: none;
+        }
+    }
+
+    &__root-menu-item {
+        &:has(#{$class}__menu-group) {
+            align-items: flex-start;
+
+            > .g-list__item-sort-icon {
+                top: 12px;
+                position: relative;
+            }
+        }
+
+        &:has(#{$class}__menu-group):not(#{$class}__root-menu-item_compact) {
+            .g-list__item-content {
+                overflow: visible;
+            }
         }
     }
 
@@ -63,14 +80,21 @@ $block: '.#{variables.$ns}composite-bar';
         }
     }
 
-    &__menu-item,
-    &__menu-group {
-        margin-inline: 10px;
-    }
-
     &__menu-group-header,
     &__menu-group-item {
         height: 36px;
+    }
+
+    &__menu-group-item {
+        position: relative;
+
+        &:not(#{$class}__menu-group-item_compact) {
+            width: calc(100% + 16px);
+        }
+
+        &_edit {
+            left: -16px;
+        }
     }
 
     &__menu-group-toggle,
