--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.scss
@@ -10,6 +10,7 @@ $actionLeftRightMargin: 10px;
 
     $class: &;
     --gn-composite-bar-item-action-size: 36px;
+    --_--item-icon-background-size: 36px;
 
     --_--horizontal-divider-line-color: var(--g-color-line-generic);
 
@@ -69,7 +70,7 @@ $actionLeftRightMargin: 10px;
 
     &__icon-place {
         flex-shrink: 0;
-        width: var(--gn-aside-header-min-width);
+        width: var(--_--item-icon-background-size, 36px);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -80,7 +81,12 @@ $actionLeftRightMargin: 10px;
         display: flex;
         align-items: center;
         overflow: hidden;
+        justify-content: space-between;
         margin: 0 var(--g-spacing-4) 0 var(--g-spacing-2);
+    }
+
+    &__visibility-button {
+        margin-left: auto;
     }
 
     &__title-text {
