--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -197,6 +197,12 @@ $block: '.#{variables.$ns}aside-header';
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        &_without-logo {
+            padding-bottom: var(--g-spacing-2);
+            margin-bottom: var(--g-spacing-2);
+            border-bottom: solid 1px var(--g-color-line-generic);
+        }
     }
 
     &__logo-button &__logo-icon-place {
@@ -262,6 +268,15 @@ $block: '.#{variables.$ns}aside-header';
 
         &_expanded-by-hover {
             padding-left: var(--gn-aside-header-min-width);
+        }
+    }
+
+    &__pin-button {
+        margin-right: 10px;
+        margin-left: auto;
+
+        &_compact {
+            margin-right: auto;
         }
     }
 }
