--- a/src/components/MobileLogo/MobileLogo.module.scss
+++ b/src/components/MobileLogo/MobileLogo.module.scss
@@ -1,6 +1,5 @@
-@use '~@gravity-ui/uikit/styles/mixins';
+@use '@gravity-ui/uikit/styles/mixins';
 @use '../variables';
-@use '../../../styles/mixins' as *;
 
 $block: '.#{variables.$ns}mobile-logo';
 
