--- a/src/components/AsideHeader/components/FooterItem/__stories__/FooterItemShowcase.scss
+++ b/src/components/AsideHeader/components/FooterItem/__stories__/FooterItemShowcase.scss
@@ -1,10 +1,10 @@
-@use '../../../../styles/mixins' as *;
+@use '@gravity-ui/uikit/styles/mixins' as *;
 
 .footer-item-showcase {
     --gn-aside-header-min-width: 56px;
 
     &__content {
-        @include mixins.text-body-3;
+        @include text-body-3;
         padding: 40px;
     }
 }
