--- a/src/components/MobileHeader/BurgerMenu/BurgerCompositeBar/BurgerCompositeBar.module.scss
+++ b/src/components/MobileHeader/BurgerMenu/BurgerCompositeBar/BurgerCompositeBar.module.scss
@@ -1,7 +1,5 @@
-@use '~@gravity-ui/uikit/styles/mixins';
+@use '@gravity-ui/uikit/styles/mixins';
 @use '../../../variables';
-@use '~@gravity-ui/uikit/styles/mixins' as *;
-@use '../../../../../styles/mixins' as *;
 
 $block: '.#{variables.$ns}burger-composite-bar';
 
