--- a/src/components/Settings/__stories__/SettingsMobileDemo.scss
+++ b/src/components/Settings/__stories__/SettingsMobileDemo.scss
@@ -1,4 +1,4 @@
-@use '~@gravity-ui/uikit/styles/mixins' as *;
+@use '@gravity-ui/uikit/styles/mixins' as *;
 
 .settings-mobile-demo {
     height: 100%;
