--- a/src/components/AsideHeader/components/FooterItem/__stories__/FooterItemShowcase.scss
+++ b/src/components/AsideHeader/components/FooterItem/__stories__/FooterItemShowcase.scss
@@ -1,4 +1,4 @@
-@use '@gravity-ui/uikit/styles/mixins' as *;
+@use '../../../../../../styles/mixins' as *;
 
 .footer-item-showcase {
     --gn-aside-header-min-width: 56px;
