--- a/src/components/MobileHeader/BurgerMenu/BurgerCompositeBar/BurgerCompositeBar.module.scss
+++ b/src/components/MobileHeader/BurgerMenu/BurgerCompositeBar/BurgerCompositeBar.module.scss
@@ -1,4 +1,4 @@
-@use '@gravity-ui/uikit/styles/mixins';
+@use '../../../../../styles/mixins';
 @use '../../../variables';
 
 $block: '.#{variables.$ns}burger-composite-bar';
