feat: added animation while expanding navigation by hover (#515)
* feat: added animation to navigaion

* refactor: move ASIDE_HEADER_HOVER_DELAY to constants

* refactor: create opacity-transition mixin

* fix: content padding while animation

* feat: tune expand hoveer delay

* fix: closing aside header after mouse leave from navigation and change compact mode

* feat: move ASIDE_HEADER_EXPAND_DELAY to constants file

---------

Co-authored-by: olaslo <skuf962@yandex.com>

--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.scss
@@ -85,6 +85,10 @@ $actionLeftRightMargin: 10px;
         margin: 0 var(--g-spacing-4) 0 var(--g-spacing-2);
     }
 
+    &__transition-title {
+        @include mixins.opacity-transition(50ms, ease-in-out);
+    }
+
     &__visibility-button {
         margin-left: auto;
     }
