fix: outside click for all pages drawer

--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -293,4 +293,8 @@ $block: '.#{variables.$ns}aside-header';
             margin-right: auto;
         }
     }
+
+    &__panel-content {
+        height: 100%;
+    }
 }
