fix: fix tooltip functionality and styling in CompositeBar and AsideHeader components
- Fix tooltip style for icons in Item.module.scss.
- Fix MultipleTooltip to display tooltipText if available, otherwise fallback to title.
- Fix styles for dark and light themes in MultipleTooltip.module.scss.
- Fixed width of the all-pages panel in AsideHeader.module.scss to fit content.

--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -243,4 +243,14 @@ $block: '.#{variables.$ns}aside-header';
         z-index: var(--gn-aside-header-content-z-index, 95);
         margin-top: var(--gn-top-alert-height, 0);
     }
+
+    &__all-pages-panel {
+        /**
+        * This is a way to fix the width of the panel.
+        * This is necessary because the panel is a sliding element and has a built-in width.
+        * Since we don't know what width the content will have, we use important to adjust the width to the content.
+        */
+        /* stylelint-disable-next-line */
+        width: fit-content !important;
+    }
 }
