--- a/src/components/AsideHeader/components/CompositeBar/MultipleTooltip/MultipleTooltip.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/MultipleTooltip/MultipleTooltip.module.scss
@@ -2,8 +2,8 @@
 
 $block: '.#{variables.$ns}multiple-tooltip';
 
-.g-root_theme_dark #{$block},
-.g-root_theme_dark-hc #{$block} {
+:global(.g-root_theme_dark),
+:global(.g-root_theme_dark-hc) {
     --multiple-tooltip-item-bg-color: var(
         --g-color-base-float-medium,
         var(--g-color-private-white-100-solid)
@@ -17,15 +17,15 @@ $block: '.#{variables.$ns}multiple-tooltip';
     --multiple-tooltip-backdrop-filter: blur(16px);
 }
 
-.g-root_theme_dark-hc #{$block} {
+:global(.g-root_theme_dark-hc) {
     --multiple-tooltip-item-bg-color: var(
         --g-color-base-float-medium,
         var(--g-color-private-white-150-solid)
     );
 }
 
-.g-root_theme_light #{$block},
-.g-root_theme_light-hc #{$block} {
+:global(.g-root_theme_light),
+:global(.g-root_theme_light-hc) {
     --multiple-tooltip-item-bg-color: var(
         --g-color-base-float-medium,
         var(--g-color-private-black-550-solid)
