feat: enhance settings layout with overflow handling and add demo for overflow scenarios

--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -127,8 +127,10 @@ $block: '.#{variables.$ns}settings';
     }
 
     &__menu {
+        display: flex;
+        flex-direction: column;
+        min-height: 0;
         border-right: 1px solid var(--g-color-line-generic);
-        overflow-y: auto;
     }
 
     &__heading {
