--- a/src/components/Settings/SettingsMenu/SettingsMenu.module.scss
+++ b/src/components/Settings/SettingsMenu/SettingsMenu.module.scss
@@ -4,6 +4,8 @@
 $block: '.#{variables.$ns}settings-menu';
 
 #{$block} {
+    overflow-y: auto;
+
     &__group {
         &-heading {
             @include mixins.text-accent;
