--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.module.scss
@@ -82,8 +82,10 @@ $block: '.#{variables.$ns}composite-bar';
         position: relative;
 
         &:last-child {
-            border-radius: 0 0 var(--gn-aside-header-item-expanded-radius)
-                var(--gn-aside-header-item-expanded-radius);
+            #{$class}__group-item {
+                border-radius: 0 0 var(--gn-aside-header-item-expanded-radius)
+                    var(--gn-aside-header-item-expanded-radius);
+            }
         }
 
         &_edit {
@@ -96,11 +98,12 @@ $block: '.#{variables.$ns}composite-bar';
     }
 
     &__menu-group-header {
-        border-radius: var(--gn-aside-header-item-expanded-radius)
-            var(--gn-aside-header-item-expanded-radius) 0 0;
+        &:not(&_collapsed) {
+            border-radius: var(--gn-aside-header-item-expanded-radius)
+                var(--gn-aside-header-item-expanded-radius) 0 0;
+        }
     }
 
-    &__menu-group-header_collapsed,
     &__menu-item_type_regular,
     &__root-menu-item[class]:hover,
     &__menu-group:hover:before,
